--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/elements": "^2.2.6",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "axios": "^1.8.4",
+    "install": "^0.13.0",
     "nativewind": "^2.0.11",
+    "npm": "^11.3.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-fast-image": "^8.6.3",
@@ -26,7 +29,9 @@
     "react-native-screens": "^4.9.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.11.0",
-    "react-native-vision-camera": "^4.6.4"
+    "react-native-vision-camera": "^4.6.4",
+    "socket.io-client": "^4.8.1",
+    "socket.io-parser": "^4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
