--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm": "^11.3.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-animatable": "^1.4.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-image-picker": "^8.2.0",
