--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-image-picker": "^8.2.0",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.11.0",
     "react-native-vision-camera": "^4.6.4",
+    "react-native-webrtc": "^124.0.5",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
     "socket.io-parser": "^4.2.4"
   },
